[package]
name = "bananar"
version = "0.0.0"
edition = "2021"

[dependencies]
nix = { version = "0.27.1", default-features = false, features = ["fs", "mman"] }
slint = { version = "1.3.2", default-features = false, features = ["std", "compat-1-2", "renderer-femtovg", "renderer-software", "software-renderer-systemfonts"] }
wayland-backend = { version = "0.3.2", features = ["client_system"] }
wayland-client = "0.31.1"
wayland-protocols = { version = "0.31.0", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.2.0", features = ["client"] }
